--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<title>Module 2 Assignment</title>
 </head>
 <body>
@@ -31,7 +31,7 @@
 			</section>
 		</div>
 
-		<div class="col-lg-4 col-md-6 col-sm-12">
+		<div class="col-lg-4 col-md-12 col-sm-12">
 			<section>
 				<h3>Sushi</h3>
 				<p>
