--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -7,7 +7,7 @@
 <body>
 	<h1 id="head1">Our Menu</h1>
 	<div class="row">
-		<div class="col-lg-4 col-md-6 col-sm-12">
+		<div class="col-lg-4 col-md-6 col-sm-12" id="d">
 			<section>
 				<h3>Chicken</h3>
 				<p>
@@ -19,7 +19,7 @@
 			</section>
 		</div>
 
-		<div class="col-lg-4 col-md-6 col-sm-12">
+		<div class="col-lg-4 col-md-6 col-sm-12" id="d">
 			<section>
 				<h3>Beef</h3>
 				<p>
@@ -31,7 +31,7 @@
 			</section>
 		</div>
 
-		<div class="col-lg-4 col-md-12 col-sm-12">
+		<div class="col-lg-4 col-md-12 col-sm-12" id="d">
 			<section>
 				<h3>Sushi</h3>
 				<p>
