--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -26,7 +26,7 @@
 
 				</div>
 				    <div id="collapsable-nav" class="collapse navbar-collapse"><!--this id make connection with above js part-->
-					<ul id="nav-list" class="nav navbar-nav navbar-right  hidden-lg hidden-md hidden-sm">
+					<ul id="nav-list" class="nav navbar-nav navbar-right  hidden-lg hidden-md hidden-sm text-center">
 						<li>
 							<a href="#">Chicken</a>
 							<!--glyphion are coming from bootstrap icon-->
